[gd_scene load_steps=21 format=3 uid="uid://cknqeae7bduye"]

[ext_resource type="Script" path="res://enemy_0.gd" id="1_wufws"]
[ext_resource type="Texture2D" uid="uid://d0axjrlgukuo4" path="res://main/sheet_enemy_4.png" id="2_b850d"]
[ext_resource type="Texture2D" uid="uid://dtfoalhr3a5yn" path="res://main/crack!!!!!!!!!!!!!!!!!!!!!!!!!!!!!.png" id="3_chha7"]
[ext_resource type="AudioStream" uid="uid://0p75pdtt26vo" path="res://main/sounds/freeze.wav" id="4_dh8vk"]
[ext_resource type="Shape2D" uid="uid://d0clm8p0qtvxj" path="res://main/enemy_colliders/4.tres" id="4_vva04"]
[ext_resource type="AudioStream" uid="uid://caeglhm208blp" path="res://main/sounds/freeze_crack.wav" id="5_ejs4g"]

[sub_resource type="Animation" id="Animation_7bwt6"]
resource_name = "anim_left"
loop_mode = 2
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:position:y")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(-2, 1),
"update": 0,
"values": [50.0, 100.0]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_74aei"]
_data = {
"AnimationY": SubResource("Animation_7bwt6")
}

[sub_resource type="Animation" id="Animation_bks4v"]
resource_name = "x"
length = 8.0
loop_mode = 2
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:position:x")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 8),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [-50.0, 850.0]
}
tracks/1/type = "method"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 8),
"transitions": PackedFloat32Array(1, 1),
"values": [{
"args": [],
"method": &"update_y"
}, {
"args": [],
"method": &"update_y"
}]
}
tracks/2/type = "method"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath(".")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 8),
"transitions": PackedFloat32Array(1, 1),
"values": [{
"args": [true],
"method": &"flip"
}, {
"args": [false],
"method": &"flip"
}]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_rcmwc"]
_data = {
"x": SubResource("Animation_bks4v")
}

[sub_resource type="Animation" id="Animation_x56jr"]
resource_name = "death"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [2]
}
tracks/1/type = "method"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(1),
"transitions": PackedFloat32Array(1),
"values": [{
"args": [],
"method": &"queue_free"
}]
}
tracks/2/type = "method"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath(".")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"values": [{
"args": ["corpse"],
"method": &"sound"
}]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("CollisionShape2D:disabled")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}

[sub_resource type="Animation" id="Animation_ql64w"]
resource_name = "hit"
length = 0.5
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.5),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 1,
"values": [0, 1, 0]
}

[sub_resource type="Animation" id="Animation_xjos1"]
resource_name = "reset"
length = 0.1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("CollisionShape2D:disabled")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_rmf6c"]
_data = {
"death": SubResource("Animation_x56jr"),
"hit": SubResource("Animation_ql64w"),
"reset": SubResource("Animation_xjos1")
}

[sub_resource type="Animation" id="Animation_khd63"]
resource_name = "freeze_0"
length = 3.1
tracks/0/type = "method"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("x")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 3),
"transitions": PackedFloat32Array(1, 1),
"values": [{
"args": [],
"method": &"pause"
}, {
"args": ["", -1, 1.0, false],
"method": &"play"
}]
}
tracks/1/type = "method"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("y")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 3),
"transitions": PackedFloat32Array(1, 1),
"values": [{
"args": [],
"method": &"pause"
}, {
"args": ["", -1, 1.0, false],
"method": &"play"
}]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Sprite2D:modulate")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 3),
"transitions": PackedFloat32Array(2, 0.5),
"update": 0,
"values": [Color(0, 1, 1, 1), Color(1, 1, 1, 1)]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath(".:can_fire")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0, 3.1),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [false, true]
}
tracks/4/type = "audio"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("freeze")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"clips": [{
"end_offset": 0.0,
"start_offset": 0.0,
"stream": ExtResource("4_dh8vk")
}],
"times": PackedFloat32Array(0)
}
tracks/4/use_blend = true

[sub_resource type="Animation" id="Animation_ooxv1"]
resource_name = "freeze_1"
length = 5.1
tracks/0/type = "method"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("x")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 5),
"transitions": PackedFloat32Array(1, 1),
"values": [{
"args": [],
"method": &"pause"
}, {
"args": ["", -1, 1.0, false],
"method": &"play"
}]
}
tracks/1/type = "method"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("y")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 5),
"transitions": PackedFloat32Array(1, 1),
"values": [{
"args": [],
"method": &"pause"
}, {
"args": ["", -1, 1.0, false],
"method": &"play"
}]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Sprite2D:modulate")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 5),
"transitions": PackedFloat32Array(2, 0.5),
"update": 0,
"values": [Color(0, 1, 1, 1), Color(1, 1, 1, 1)]
}
tracks/3/type = "method"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath(".")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0, 1, 2, 3, 3.99, 5),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1),
"values": [{
"args": [30, false],
"method": &"enemy_hit"
}, {
"args": [30, false],
"method": &"enemy_hit"
}, {
"args": [30, false],
"method": &"enemy_hit"
}, {
"args": [30, false],
"method": &"enemy_hit"
}, {
"args": [30, false],
"method": &"enemy_hit"
}, {
"args": [30, false],
"method": &"enemy_hit"
}]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("Sprite2D/Sprite2D2:modulate")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0, 0.6, 1, 1.8, 2, 2.6, 3, 3.9, 4, 5.1),
"transitions": PackedFloat32Array(2, 0, 2, 0, 2, 0, 2, 0, 2, 0),
"update": 0,
"values": [Color(1, 1, 1, 1), Color(1, 1, 1, 0), Color(1, 1, 1, 1), Color(1, 1, 1, 0), Color(1, 1, 1, 1), Color(1, 1, 1, 0), Color(1, 1, 1, 1), Color(1, 1, 1, 0), Color(1, 1, 1, 1), Color(1, 1, 1, 0)]
}
tracks/5/type = "value"
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/path = NodePath(".:can_fire")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/keys = {
"times": PackedFloat32Array(0, 5.1),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [false, true]
}
tracks/6/type = "audio"
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/path = NodePath("freeze")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/keys = {
"clips": [{
"end_offset": 0.575,
"start_offset": 0.0,
"stream": ExtResource("4_dh8vk")
}, {
"end_offset": 0.0,
"start_offset": 0.0,
"stream": ExtResource("5_ejs4g")
}, {
"end_offset": 0.0,
"start_offset": 0.0,
"stream": ExtResource("5_ejs4g")
}, {
"end_offset": 0.0,
"start_offset": 0.0,
"stream": ExtResource("5_ejs4g")
}, {
"end_offset": 0.0,
"start_offset": 0.0,
"stream": ExtResource("5_ejs4g")
}],
"times": PackedFloat32Array(0, 1, 2, 3, 4)
}
tracks/6/use_blend = true

[sub_resource type="Animation" id="Animation_dtk6q"]
resource_name = "freeze_2_4"
length = 3.1
tracks/0/type = "method"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("x")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(3),
"transitions": PackedFloat32Array(1),
"values": [{
"args": ["", -1, 1.0, false],
"method": &"play"
}]
}
tracks/1/type = "method"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("y")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(3),
"transitions": PackedFloat32Array(1),
"values": [{
"args": ["", -1, 1.0, false],
"method": &"play"
}]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Sprite2D:modulate")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 3),
"transitions": PackedFloat32Array(2, 0.5),
"update": 0,
"values": [Color(0, 1, 1, 1), Color(1, 1, 1, 1)]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath(".:can_fire")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0, 3.1),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [false, true]
}
tracks/4/type = "audio"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("freeze")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"clips": [{
"end_offset": 0.0,
"start_offset": 0.0,
"stream": ExtResource("4_dh8vk")
}],
"times": PackedFloat32Array(0)
}
tracks/4/use_blend = true
tracks/5/type = "value"
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/path = NodePath("y:speed_scale")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/keys = {
"times": PackedFloat32Array(0, 3),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [0.25, 1.0]
}
tracks/6/type = "value"
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/path = NodePath("x:speed_scale")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/keys = {
"times": PackedFloat32Array(0, 3),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [0.25, 1.0]
}

[sub_resource type="Animation" id="Animation_dlktd"]
resource_name = "freeze_2_5"
length = 3.1
tracks/0/type = "method"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("x")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(3),
"transitions": PackedFloat32Array(1),
"values": [{
"args": ["", -1, 1.0, false],
"method": &"play"
}]
}
tracks/1/type = "method"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("y")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(3),
"transitions": PackedFloat32Array(1),
"values": [{
"args": ["", -1, 1.0, false],
"method": &"play"
}]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Sprite2D:modulate")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 3),
"transitions": PackedFloat32Array(2, 0.5),
"update": 0,
"values": [Color(0, 1, 1, 1), Color(1, 1, 1, 1)]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath(".:can_fire")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0, 3.1),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [false, true]
}
tracks/4/type = "audio"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("freeze")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"clips": [{
"end_offset": 0.0,
"start_offset": 0.0,
"stream": ExtResource("4_dh8vk")
}],
"times": PackedFloat32Array(0)
}
tracks/4/use_blend = true
tracks/5/type = "value"
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/path = NodePath("y:speed_scale")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/keys = {
"times": PackedFloat32Array(0, 3),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [0.0, 1.0]
}
tracks/6/type = "value"
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/path = NodePath("x:speed_scale")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/keys = {
"times": PackedFloat32Array(0, 3),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [0.0, 1.0]
}

[sub_resource type="Animation" id="Animation_3khw1"]
resource_name = "reset"
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 1)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Sprite2D/Sprite2D2:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 0)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath(".:can_fire")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_0ptab"]
_data = {
"freeze_0": SubResource("Animation_khd63"),
"freeze_1": SubResource("Animation_ooxv1"),
"freeze_2_4": SubResource("Animation_dtk6q"),
"freeze_2_5": SubResource("Animation_dlktd"),
"reset": SubResource("Animation_3khw1")
}

[node name="StaticBody2D" type="StaticBody2D" groups=["enemies"]]
position = Vector2(-50, 98.8985)
script = ExtResource("1_wufws")
can_fire = false

[node name="y" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_74aei")
}
autoplay = "AnimationY"
blend_times = [&"AnimationY", &"AnimationY", 1.0]

[node name="x" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_rcmwc")
}

[node name="Sprite2D" type="Sprite2D" parent="."]
modulate = Color(0, 1, 1, 1)
position = Vector2(-50, 50)
texture = ExtResource("2_b850d")
flip_h = true
hframes = 3

[node name="Sprite2D2" type="Sprite2D" parent="Sprite2D"]
position = Vector2(0, 2)
scale = Vector2(0.125, 0.125)
texture = ExtResource("3_chha7")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(-50, 50)
shape = ExtResource("4_vva04")
disabled = true

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_rmf6c")
}
autoplay = "reset"

[node name="Timer" type="Timer" parent="."]
autostart = true

[node name="AnimationPlayer2" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_0ptab")
}
autoplay = "reset"
speed_scale = 0.5

[node name="ec1_timer" type="Timer" parent="."]
wait_time = 0.1
one_shot = true

[node name="corpse" type="AudioStreamPlayer" parent="."]

[node name="fire" type="AudioStreamPlayer" parent="."]

[node name="freeze" type="AudioStreamPlayer" parent="."]

[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
[connection signal="timeout" from="ec1_timer" to="." method="_on_ec_1_timer_timeout"]
